Adding a stable version with agents working and handshaking with machines.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,18 +1,6 @@
 [URL]
 GameName=AASMAProject
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDownBP/Maps/TopDownExampleMap
-GameDefaultMap=/Game/TopDownBP/Maps/TopDownExampleMap
-TransitionMap=
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode_C
-GlobalDefaultServerGameMode=None
-
-
-
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_TopDownBP",NewGameName="/Script/AASMAProject")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_TopDownBP",NewGameName="/Script/AASMAProject")
@@ -66,5 +54,18 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
+
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/OurContent/Maps/Boat
+LocalMapOptions=
+TransitionMap=
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/OurContent/Maps/Boat
+ServerDefaultMap=/Engine/Maps/Entry
+GlobalDefaultGameMode=/Game/OurContent/Blueprints/GameState/TopDownGameMode.TopDownGameMode_C
+GlobalDefaultServerGameMode=None
 
 
